still trying to fix spacing on dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,7 +78,7 @@ a:focus { color: #FAD472; text-decoration: underline;}
   .top-logo{
     height: 30px;
     width: auto;
-    margin: 10px 10px;
+    margin: 3px 10px;
   }
 
   .sign-out{
