--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -72,7 +72,7 @@
 #action-items{
   width:80%;
   margin:auto;
-  margin-top:50px;
+  margin-top:10%;
   padding: 15px 15px;
   font-size:18px;
   border: 1px solid #eee;
